import "Content_v2.proto";

package Diadoc.Api.Proto;

option java_outer_classname = "CloudSignProtos";

message CloudSignRequest {
	repeated CloudSignFile Files = 1; 
}

message CloudSignFile {
	optional Content_v2 Content = 1;
	optional string FileName = 2;
}

message CloudSignResult {
	optional string Token = 1;
}

message CloudSignConfirmResult {
	repeated Content_v2 Signatures = 1;
}

message AutosignReceiptsResult {
	required int64 SignedReceiptsCount = 1;
	required string NextBatchKey = 2;
}